# bazel-go-hello-world

./: BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/: BUILD.bazel
