load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/kosuke-fujishiro/bazel-go-hello-world/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    srcs = ["main.go"],
    importpath = "github.com/kosuke-fujishiro/bazel-go-hello-world/cmd",
    pure = "on",
    visibility = ["//visibility:private"],
)